--- a/main.css
+++ b/main.css
@@ -1,9 +1,12 @@
-@import 'https://fonts.googleapis.com/css?family=Raleway:500,700,900|Roboto';
+@import 'https://fonts.googleapis.com/css?family=Raleway:300,500,700,900|Roboto';
 
 html {
     font-size: 16px;
 }
-
+a {
+    color: inherit;
+    text-decoration: none;
+}
 
 /* Buttons */
 /********************************/
@@ -49,3 +52,48 @@ html {
     background: #B2E3CE;
     border-color: #808080;
 }
+
+/* Navbar */
+/********************************/
+
+.nav__container {
+    background: #003066;
+    box-shadow: inset 0px -2px 6px 0px rgba(0,0,0,0.22);
+    font-size: 1.125rem; /* 18px */
+}
+
+ul.nav {
+    display: flex;
+    margin: 0;
+    padding: 0;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    max-width: 48rem;
+    margin: auto;
+}
+
+li.nav__item {
+    list-style: none;
+ }
+li.nav__item > a {
+    display: inline-block;
+    font-family: 'Raleway', sans-serif;
+    font-weight: 300;
+    
+    line-height: 1.16666666em; /* 21px */
+    padding: 0.8333333333em 0.777777777em 0.777777777em; /* 15px TOP */  /* 14px */
+    
+    color: #DBDBDB;
+    letter-spacing: 0px;
+}
+
+ li.nav__item--active > a {
+    padding-top: 0.777777777em;
+    border-bottom: rgb(255, 255, 255) solid 1px;
+    color: #fff;
+    box-shadow: inset 0 -3px 3px -2px rgb(255, 255, 255);
+ }
+
+     
+   
+    
