--- a/main.css
+++ b/main.css
@@ -68,7 +68,7 @@ ul.nav {
     padding: 0;
     flex-wrap: wrap;
     justify-content: space-around;
-    max-width: 48rem;
+    max-width: 48em;
     margin: auto;
 }
 
@@ -91,7 +91,7 @@ li.nav__item > a {
     padding-top: 0.777777777em;
     border-bottom: rgb(255, 255, 255) solid 1px;
     color: #fff;
-    box-shadow: inset 0 -3px 3px -2px rgb(255, 255, 255);
+    box-shadow: inset 0 -5px 5px -5px rgb(255, 255, 255);
  }
 
      
